[metadata]
name = random_password
version = 0.0.0
description = Generate random passwords
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/random_passwords
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
py_modules = randpass.py
install_requires:

python_requires = >= 3.6.1

[options.entry_points]
console_scripts =
    rpass = randpass:main